# nflMatchupPredictor

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml
Docs/source/: conf.py  index.rst  sample_function.rst
nflMatchupPredictor/: .flaskenv  requirements.txt
nflMatchupPredictor/Adhoc/: Adhoc.py
nflMatchupPredictor/Api/: app.py  extensions.py  manage.py  wsgi.py
nflMatchupPredictor/Api/api/: __init__.py  views.py
nflMatchupPredictor/Api/api/resources/: __init__.py  models.py
nflMatchupPredictor/Api/api/schemas/: __init__.py  models.py
nflMatchupPredictor/Api/auth/: views.py
nflMatchupPredictor/Api/commons/: apispec.py
nflMatchupPredictor/Api/commons/templates/: redoc.j2  swagger.j2
nflMatchupPredictor/DataBuilds/: DataBuilds.py
nflMatchupPredictor/DataLoaders/: AwsModule.py  AzureModule.py  CreateDataCli.py  DataLoader.py
nflMatchupPredictor/DataProcessing/: DataProcessing.py
nflMatchupPredictor/Database/: Database.py
nflMatchupPredictor/Features/: FeatureEngineering.py  Features.py
nflMatchupPredictor/Metrics/: Metrics.py
nflMatchupPredictor/Models/: BaseModel.py  CorrelationModels.py  LinearModels.py  ModelAnalyzer.py  SimilarityModels.py  TensorFlowModels.py  TreeModels.py
nflMatchupPredictor/Scraping/: BaseScraper.py  GeneralDataScraper.py  Scraping.py  TeamDataScraper.py
nflMatchupPredictor/TestingEnv/: DataLoadingTester.py  DataViewer.py  TestEnv.py  TestingEnv.py  testing_env.py
nflMatchupPredictor/Utilities/: utilities.py
